--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,12 +21,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="반갑습니다."
-        android:textColor="#8080"/>
+        android:textColor="#8080"
+        android:textSize="25sp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="저는 hsols 입니다."/>
+        android:text="저는 hsols 입니다."
+        android:textSize="18sp"/>
 
 
 </LinearLayout>
